Criando o componente Footer e utilizando os FontAwesome, bem como inserindo o menu no Header para a futura navegaçao

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,1 +1,59 @@
-<p>header works!</p>
+<mat-toolbar class="header">
+  <span>
+    <a>
+      <img class="logo" src="assets/images/logo.png" alt="logo">
+    </a>
+  </span>
+  <nav class="menu">
+    <ul>
+      <li class="item-menu">
+        <a>
+          Home
+          <div class=item-marked></div>
+        </a>
+      </li>
+      <li class="item-menu">
+        <a>
+          Sobre
+          <div class=item-marked></div>
+        </a>
+      </li>
+      <li class="item-menu">
+        <a>
+          Cases
+          <div class=item-marked></div>
+        </a>
+      </li>
+      <li class="item-menu">
+        <a>
+          Carreira
+          <div class=item-marked></div>
+        </a>
+      </li>
+      <li class="item-menu">
+        <a>
+          Contatos
+          <div class=item-marked></div>
+        </a>
+      </li>
+      <li>
+        <a>
+          <fa-icon [icon]="faFacebook"></fa-icon>
+          <div class="workaround"></div>
+        </a>
+      </li>
+      <li>
+        <a>
+          <fa-icon [icon]="faLinkedin"></fa-icon>
+          <div class="workaround"></div>
+        </a>
+      </li>
+      <li>
+        <a>
+          <fa-icon [icon]="faInstagram"></fa-icon>
+          <div class="workaround"></div>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</mat-toolbar>
